# zmanim_bot_omer_broadcast

./: .gitignore  Dockerfile  Pipfile  pyproject.toml
.github/workflows/: main.yaml
broadcast/: config.py  file_logger.py  helpers.py  job.py  main.py  misc.py  texsts.py  tg_logger.py
