[tool.poetry]
name = "zmanim_bot_omer_broadcast"
version = "0.1.0"
description = ""
authors = ["Benyamin Ginzburg <benyomin.94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

apscheduler = "*"
pymongo = "*"
python-telegram-bot = "*"
pytz = "*"
timezonefinder = "*"
zmanim = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
