[tool.poetry]
name = "zmanim_bot_omer_broadcast"
version = "0.1.0"
description = ""
authors = ["Benyamin Ginzburg <benyomin.94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"

pymongo = "==4.3.3"
python-telegram-bot = "==12.8"
timezonefinder = "==6.2.0"
zmanim = "==0.3.1"
betterlogging = '==0.2.1'

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
